--- a/EC2-CFN-init-signal.yaml
+++ b/EC2-CFN-init-signal.yaml
@@ -16,9 +16,7 @@ Resources:
             #!/bin/bash -xe
             yum update -y aws-cfn-bootstrap
             /opt/aws/bin/cfn-init -s ${AWS::StackId} -r cfnDemoEc2 --region ${AWS::Region}
-            $cfn_status=$?
-            /opt/aws/bin/cfn-signal --exit-code $cfn_status --resource cfnDemoWaitCondition --stack ${AWS::StackName} --region ${AWS::Region}
-            exit $cfn_status
+            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource cfnDemoWaitCondition --region ${AWS::Region}
     Metadata:
       Comment: Install httpd with cfn init
       AWS::CloudFormation::Init:
